stacks/services/ecs/stack-load-balancer.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Defines a load balancer

Parameters:
  VpcId:
    Type: String
    Description: ID of the VPC to start the instances in
  SubnetIds:
    Type: CommaDelimitedList
    Description: IDs of the subnets to start the instances in
  CertificateArn:
    Type: String
    Description: Arn of the ACM certificate
  DomainName:
    Type: String
    Description: The domain name corresponding to the ACM certificate

  TargetInstanceIds:
    Type: CommaDelimitedList
    Description: 'The ID of the EC2 instances that are initial targest of the load balancer. As a JSON string of the form: ''[{"Id": "i-0123456789abcdef0"}, {"Id": "i-0abcdef1234567890"}]'''
    Default: ''
    ConstraintDescription: Must be one of the valid instance specified in the stack parameters
  HealthCheckPath:
    Type: String
    Description: The route on which GET requests are sent to check the health of the service
    Default: /

Conditions:
  HasSSHKeyName: !Not [!Equals ['', !Ref SSHKeyName]]

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Application Load Balancer
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${AWS::StackName}-LoadBalancer
      Subnets: !Ref SubnetIds
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      Type: application
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: 404
            ContentType: text/plain
            MessageBody: "Not Found"
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-2016-08
      Certificates:
        - CertificateArn: !Ref CertificateArn

Outputs:
  pass
